# techmart-pipeline-template

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  lint.yml
data/: README.md  orders.csv
src/techmart/: __init__.py  __main__.py  cleaning.py  enrichment.txt  ingestion.py  validation.py
tests/: test_example.py
